# scintex

./: CMakeLists.txt
demo/: main.cpp
include/scintex/: basic_color_palette.hpp  basic_input_controller.hpp  basic_style_palette.hpp  basic_text_model.hpp  clang_syntax_highlighter.hpp  clang_text_formatter.hpp  color_palette.hpp  color_region.hpp  compat.hpp  cursor.hpp  diagnostic_engine.hpp  input_controller.hpp  keyword_syntax_highlighter.hpp  line_numbers_view.hpp  linear_text_operation_history.hpp  margin_view.hpp  region.hpp  scintex.hpp  scroll_overview_view.hpp  style.hpp  style_palette.hpp  style_region.hpp  syntax_highlighter.hpp  text_formatter.hpp  text_model.hpp  text_operation.hpp  text_operation_history_manager.hpp  text_view.hpp
src/: basic_color_palette.cpp  basic_input_controller.cpp  basic_style_palette.cpp  basic_text_model.cpp  clang_shared.cpp  clang_shared.hpp  clang_syntax_highlighter.cpp  clang_text_formatter.cpp  color_palette.cpp  color_region.cpp  cursor.cpp  input_controller.cpp  line_numbers_view.cpp  linear_text_operation_history.cpp  margin_view.cpp  region.cpp  scroll_overview_view.cpp  style.cpp  style_palette.cpp  style_region.cpp  syntax_highlighter.cpp  text_formatter.cpp  text_model.cpp  text_operation.cpp  text_operation_history_manager.cpp  text_view.cpp
test/: CMakeLists.txt  linear_text_operation_history.cpp  region.cpp
